# match-rust

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.md  SUPPORT.zh-CN.md
.cursor/rules/: human-prose.mdc
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/match-bench/: Cargo.toml
crates/match-bench/benches/: engine_cmp.rs
crates/match-bench/src/: lib.rs  tier.rs  workload.rs
crates/match-contract/: Cargo.toml  config.example.yaml
crates/match-contract/src/: bootstrap.rs  config.rs  health.rs  inbound.rs  lib.rs  main.rs  outbound.rs  redis_store.rs  symbol_worker.rs
crates/match-contract/src/mq/: consumer.rs  producer.rs  topics.rs
crates/match-contract/src/rpc/: market.rs  mod.rs  order.rs  response.rs
crates/match-contract/tests/: redis_integration.rs  rpc_urls.rs
crates/match-core/: Cargo.toml
crates/match-core-hp/: Cargo.toml
crates/match-core-hp/src/: adapter.rs  affinity.rs  art_index.rs  book.rs  engine.rs  level.rs  level_index.rs  lib.rs  order_store.rs  scale.rs  spsc.rs  types.rs  worker.rs
crates/match-core-hp/tests/: adapter_bborder.rs  art_index_ops.rs  art_parity.rs  best_price_cache.rs  coverage_gaps.rs  limit_match.rs  market_depth.rs  scale_convert.rs  spsc_edges.rs  spsc_worker.rs
crates/match-core/src/: book.rs  depth.rs  engine.rs  lib.rs  match_limit.rs  match_market.rs  order.rs  price_utils.rs
crates/match-core/src/handlers/: fok_buy.rs  fok_sell.rs  height_buy.rs  height_sell.rs  mod.rs
crates/match-core/tests/: l1_advanced.rs  l1_advanced_sell.rs  l1_book_and_engine.rs  l1_coverage_gaps.rs  l1_depth.rs  l1_fok_branches.rs  l1_limit_cross.rs  l1_limit_fill.rs  l1_market_gear.rs
crates/match-protocol/: Cargo.toml
crates/match-protocol/src/: constants.rs  convert.rs  encode.rs  lib.rs  mq_order.rs  order.rs  validate.rs
crates/match-protocol/tests/: validate_convert.rs
crates/match-replay/: Cargo.toml
crates/match-replay/src/: diff.rs  lib.rs  main.rs  trace.rs
crates/match-spot/: Cargo.toml
crates/match-spot/src/: lib.rs
crates/match-wal/: Cargo.toml
crates/match-wal/src/: lib.rs
crates/match-wal/tests/: coverage_branches.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  COVERAGE.md  COVERAGE.zh-CN.md  README.md  README.zh-CN.md  bench-results.md  bench-results.zh-CN.md  best-practices.md  best-practices.zh-CN.md  cutover-runbook.md  cutover-runbook.zh-CN.md  e2e-budget.md  e2e-budget.zh-CN.md  fair-compare.md  fair-compare.zh-CN.md  l3-shadow.md  l3-shadow.zh-CN.md  perf-tier-sweep.md  perf-tier-sweep.zh-CN.md  rmq-spike.md  rmq-spike.zh-CN.md
docs/bench-results/: tier-quick-pre-opt.txt  tier-sweep-final.csv
docs/plans/: 2026-07-17-rust-match-engines.md  2026-07-17-rust-match-engines.zh-CN.md  2026-07-18-match-core-hp.md  2026-07-18-match-core-hp.zh-CN.md  2026-07-18-pe-optimizations.md  2026-07-18-pe-optimizations.zh-CN.md
docs/specs/: 2026-07-17-rust-match-engines-design.md  2026-07-17-rust-match-engines-design.zh-CN.md  2026-07-18-match-core-hp-design.md  2026-07-18-match-core-hp-design.zh-CN.md  2026-07-18-pe-optimizations-design.md  2026-07-18-pe-optimizations-design.zh-CN.md  2026-07-18-pe-optimizations-plan.md  2026-07-22-tier-sweep-design.md  2026-07-22-tier-sweep-design.zh-CN.md
docs/wiki/: README.md  README.zh-CN.md
docs/wiki/en/: Architecture.md  FAQ.md  Getting-Started.md  Home.md  Performance.md  Related-Projects.md  Roadmap.md
docs/wiki/zh/: Architecture.md  FAQ.md  Getting-Started.md  Home.md  Performance.md  Related-Projects.md  Roadmap.md
testdata/golden/: limit_cross.ndjson
