[workspace]
resolver = "2"
members = [
  "crates/match-protocol",
  "crates/match-core",
  "crates/match-replay",
  "crates/match-contract",
  "crates/match-spot",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
