[workspace]
resolver = "2"
members = [
  "crates/match-protocol",
  "crates/match-core",
  "crates/match-core-hp",
  "crates/match-bench",
  "crates/match-replay",
  "crates/match-contract",
  "crates/match-spot",
  "crates/match-wal",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["cluster"] }
thiserror = "1"
tracing = "0.1"
