[package]
name = "match-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
match-core = { path = "../match-core" }
match-core-hp = { path = "../match-core-hp" }
match-protocol = { path = "../match-protocol" }
bigdecimal = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_cmp"
harness = false

[[bin]]
name = "fair_compare"
path = "src/bin/fair_compare.rs"

[[bin]]
name = "tier_sweep"
path = "src/bin/tier_sweep.rs"
