[package]
name = "match-contract"
version.workspace = true
edition.workspace = true

[[bin]]
name = "match-contract"
path = "src/main.rs"

[dependencies]
match-core = { path = "../match-core" }
match-protocol = { path = "../match-protocol" }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
