[package]
name = "match-contract"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "match-contract"
path = "src/main.rs"

[dependencies]
bigdecimal = { workspace = true }
match-core = { path = "../match-core" }
match-protocol = { path = "../match-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
