[package]
name = "match-contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "match-contract"
path = "src/main.rs"

[features]
default = []
## Experimental: symbol workers use `match-core-hp` + L2/L3/L1 span metrics.
hp-engine = ["dep:match-core-hp"]

[dependencies]
axum = "0.7"
bigdecimal = { workspace = true }
match-core = { path = "../match-core" }
match-core-hp = { path = "../match-core-hp", optional = true }
match-protocol = { path = "../match-protocol" }
redis = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = { workspace = true }
