[package]
name = "match-core-hp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## Optional CPU pinning via `core_affinity` (see `affinity` module / docs/best-practices.md).
affinity = ["dep:core_affinity"]
## Byte-radix (ART-style) price-level index instead of BTreeMap.
art = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(coverage)'] }

[dependencies]
thiserror = { workspace = true }
match-protocol = { path = "../match-protocol" }
bigdecimal = { workspace = true }
core_affinity = { version = "0.8", optional = true }
