[package]
name = "match-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
bigdecimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bigdecimal = { workspace = true }
serde_json = { workspace = true }
