[package]
name = "match-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "match-replay"
path = "src/main.rs"

[dependencies]
match-core = { path = "../match-core" }
match-protocol = { path = "../match-protocol" }
bigdecimal = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
